vlib/v/checker/tests/alias_to_option_err.vv
type TestInt = ?int
type TestString = ?string
type TestF64 = ?f64

struct Struct {
}

type TestStruct = ?Struct

fn main() {
	f := TestInt(1)
	dump(f)
	println(f)

	g := TestString('foo')
	dump(g)
	println(g)

	h := TestString(none)
	dump(h)

	i := TestF64(none)
	dump(i)

	l := TestStruct(none)
	dump(l)

	k := TestStruct(Struct{})
	dump(k)
}
